# tinydb

./: .gitignore  .spec-superflow.yaml  :memory:  GEMINI.md  LICENSE  README.md  design.md  execution-contract.md  proposal.md  pyproject.toml
.claude/always/: phase-guard.md
.cursor/rules/: phase-guard.mdc
.github/: copilot-instructions.md
.superpowers/sdd/: progress.md
changes/tinydb/: .spec-superflow.yaml  decision-point-audit.md  tasks.md
changes/tinydb-v0.2/: .spec-superflow.yaml  design.md  execution-contract.md  proposal.md  tasks.md
docs/: FUNCTIONAL_TEST_REPORT.md  v0.2功能测试报告.md  功能测试报告.md
examples/: demo.py  demo_v0_2.py
scripts/: .functional_results.json  .functional_results_cli.json  .functional_results_v0_2.json  functional_tests.py  functional_tests_v0_2.py
specs/: cli.md  storage-engine.md
specs/cli/: spec.md
specs/sql-parser/: spec.md
specs/type-system/: spec.md
src/tinydb/: __init__.py  __main__.py  _version.py  api.py  errors.py
tests/: conftest.py  scope_audit.md  test_cli_enhance.py  test_concurrent.py  test_concurrent_integration.py  test_database.py  test_demo.py  test_e2e_v0_2.py  test_errors.py  test_join.py  test_join_e2e.py  test_smoke.py  test_v0_1_compat.py
tests/cli/: test_argparse.py  test_argparse_ext.py  test_format.py  test_main_e2e.py  test_meta.py  test_polish.py  test_repl.py
tests/executor/: conftest.py  test_aggregate.py  test_dml.py  test_index_plan.py  test_index_scan.py  test_planner.py  test_select.py  test_sort.py
tests/index/: test_btree.py  test_manager.py
tests/integration/: test_e2e.py
tests/sql/: test_ast.py  test_parser_clauses.py  test_parser_ddl.py  test_parser_dml.py  test_parser_end_to_end.py  test_parser_errors.py  test_parser_expr.py  (+2 more)
(+139 files in other folders)
