[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinydb"
version = "0.2.0"
description = "Lightweight embedded relational database for Python with SQL JOINs and concurrent access"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "tinydb contributors"}]
keywords = ["database", "embedded", "sql", "rdb", "join", "concurrent", "teaching"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Typing :: Typed",
]

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-cov>=4.0"]
cli = ["prompt_toolkit>=3.0.40"]

[project.scripts]
tinydb = "tinydb.cli.__main__:main"

[project.urls]
Homepage = "https://github.com/songmenglin-dev/tinydb"
Repository = "https://github.com/songmenglin-dev/tinydb.git"
Issues = "https://github.com/songmenglin-dev/tinydb/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "unit: marks unit tests (single module, no I/O)",
    "integration: marks tests that touch real storage / disk",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "crash: marks recovery / fuzz tests that simulate crashes",
]
